tests/baselines/reference/externalModuleAssignToVar.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
externalModuleAssignToVar_core_require.ts(1,18): error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
externalModuleAssignToVar_core_require2.ts(1,11): error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
externalModuleAssignToVar_ext.ts(1,11): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== externalModuleAssignToVar_core.ts (0 errors) ====
    ///<reference path='externalModuleAssignToVar_core_require.ts'/>
    import ext = require('externalModuleAssignToVar_core_require');
    var y1: { C: new() => ext.C; } = ext;
    y1 = ext; // ok
    
    import ext2 = require('externalModuleAssignToVar_core_require2');
    var y2: new() => ext2 = ext2;
    y2 = ext2; // ok
    
    import ext3 = require('externalModuleAssignToVar_ext');
    var y3: new () => ext3 = ext3;
    y3 = ext3; // ok
    
==== externalModuleAssignToVar_ext.ts (1 errors) ====
    class D { foo: string; }
              ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    export = D;
    
==== externalModuleAssignToVar_core_require.ts (1 errors) ====
    export class C { bar: string; }
                     ~~~
!!! error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
    
==== externalModuleAssignToVar_core_require2.ts (1 errors) ====
    class C { baz: string; }
              ~~~
!!! error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
    export = C;
    